--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>hibernate-core</artifactId>
       <version>5.4.15.Final</version>
     </dependency>
+   <dependency>
+     <groupId>org.postgresql</groupId>
+     <artifactId>postgresql</artifactId>
+     <version>42.2.12</version>
+   </dependency>
   </dependencies>
 
   <build>
