--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+   <dependency>
+     <groupId>junit</groupId>
+     <artifactId>junit</artifactId>
+     <version>4.13.2</version>
+     <scope>compile</scope>
+   </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
@@ -42,7 +48,19 @@
      <artifactId>postgresql</artifactId>
      <version>42.2.12</version>
    </dependency>
-  </dependencies>
+   <dependency>
+     <groupId>org.hsqldb</groupId>
+     <artifactId>hsqldb</artifactId>
+     <version>2.5.1</version>
+     <scope>test</scope>
+   </dependency>
+   <dependency>
+     <groupId>org.apache.commons</groupId>
+     <artifactId>commons-dbcp2</artifactId>
+     <version>2.9.0</version>
+   </dependency>
+
+ </dependencies>
 
   <build>
     <plugins>
